# pywitch

./: LICENSE  README.md  __init__.py  pyproject.toml  pywitch.py  pywitch_BACKUP.py  pywitch_functions.py  pywitch_heat.py  pywitch_redemptions.py  pywitch_streaminfo.py  pywitch_tmi.py  requirements.txt  setup.cfg
examples/: message_screen_click.py  send_chat_messages.py  token_validation.py  watch_chat_messages.py  watch_heat.py  watch_redemptions.py  watch_steaminfo.py
src/pywitch/: __init__.py  pywitch_functions.py  pywitch_heat.py  pywitch_redemptions.py  pywitch_streaminfo.py  pywitch_tmi.py
