[metadata]
name = pywitch-ourique.gustavo
version = 1.0.0
author = Gustavo Ourique
author_email = ourique.gustavo@gmail.com
description = Integrate Twitch Stream data, chat, redemptions using Python!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ouriquegustavo/pywitch
classifiers =
    Programming Language :: Python :: 3
    License ::  MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
