[metadata]
name = pywitch
version = 1.0.1
author = Gustavo Ourique
author_email = ourique.gustavo@gmail.com
description = Integrate Twitch Stream data, chat, redemptions using Python!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ouriquegustavo/pywitch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires = requests>=2.26.0,websocket-client>=1.2.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
